--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,22 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "AllowedHosts": "*",
+    "Serilog": {
+        "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.Debug", "Serilog.Sinks.File" ],
+        "MinimumLevel": "Debug",
+        "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+        "WriteTo": [
+            { "Name": "Console" },
+            { "Name": "Debug" },
+            {
+                "Name": "File",
+                "Args": {
+                    "path": "Logs/log.txt",
+                    "rollingInterval": "Day",
+                    "rollOnFileSizeLimit": true,
+                    "fileSizeLimitBytes": 2147483648,
+                    "retainedFileCountLimit": 14
+                }
+            }
+        ]
     }
-  },
-  "AllowedHosts": "*"
 }
